# -2.0

./: CMakeLists.txt  README.md  README_ZH.md  REPORT.md  main.cpp
core/: GameLoop.cpp  GameLoop.h  StateMachine.cpp  StateMachine.h  Types.h
gameplay/: Food.cpp  Food.h  Snake.cpp
persistence/: SaveSystem.cpp  SaveSystem.h
systems/: InputSystem.cpp  InputSystem.h  RenderSystem.cpp  RenderSystem.h  TimeSystem.cpp  TimeSystem.h
